--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FRONTEND_PORT=8080
-SERVER_PORT=8081
+HTTP_SERVER_PORT=8081
+GRPC_SERVER_PORT=9090
 
 TIME_ADDITION_MS=5000
 TIME_SUBTRACTION_MS=5000
